fix: UI Misalignment and Broken Layout on User Application (#919)
* fix: UI Misalignment and Broken Layout on User Application

* fix: footer position issue

---------

--- a/global.css
+++ b/global.css
@@ -176,7 +176,6 @@ body {
 .footer {
   width: 100vw;
   text-align: center;
-  position: fixed;
   bottom: 4px;
 }
 
